--- a/ClientsAccounts.Tests/packages.config
+++ b/ClientsAccounts.Tests/packages.config
@@ -4,9 +4,9 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net481" />
   <package id="Moq" version="4.18.4" targetFramework="net48" />
-  <package id="MSTest.TestAdapter" version="2.2.7" targetFramework="net481" />
-  <package id="MSTest.TestFramework" version="2.2.7" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net481" />
+  <package id="NUnit" version="3.13.3" targetFramework="net48" />
+  <package id="NUnit3TestAdapter" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
