--- a/ClientsAccounts.Tests/packages.config
+++ b/ClientsAccounts.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net481" />
   <package id="Moq" version="4.18.4" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net481" />
+  <package id="NSubstitute" version="4.4.0" targetFramework="net48" />
   <package id="NUnit" version="3.13.3" targetFramework="net48" />
   <package id="NUnit3TestAdapter" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
