--- a/ClientAccount/ClientsAccounts.csproj
+++ b/ClientAccount/ClientsAccounts.csproj
@@ -87,6 +87,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Documentation\Diagram.PNG" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
